; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cache.c_dispatch_gid_change_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cache.c_dispatch_gid_change_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { i32 }
%struct.ib_event = type { i32, %struct.TYPE_2__, %struct.ib_device* }
%struct.TYPE_2__ = type { i32 }

@IB_EVENT_GID_CHANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_device*, i32)* @dispatch_gid_change_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispatch_gid_change_event(%struct.ib_device* %0, i32 %1) #0 {
  %3 = alloca %struct.ib_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ib_event, align 8
  store %struct.ib_device* %0, %struct.ib_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ib_device*, %struct.ib_device** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @rdma_cap_roce_gid_table(%struct.ib_device* %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load %struct.ib_device*, %struct.ib_device** %3, align 8
  %12 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %5, i32 0, i32 2
  store %struct.ib_device* %11, %struct.ib_device** %12, align 8
  %13 = load i32, i32* %4, align 4
  %14 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %5, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* @IB_EVENT_GID_CHANGE, align 4
  %17 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %5, i32 0, i32 0
  store i32 %16, i32* %17, align 8
  %18 = call i32 @ib_dispatch_event(%struct.ib_event* %5)
  br label %19

19:                                               ; preds = %10, %2
  ret void
}

declare dso_local i64 @rdma_cap_roce_gid_table(%struct.ib_device*, i32) #1

declare dso_local i32 @ib_dispatch_event(%struct.ib_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
